# controller/staffController.go
@@ -12,37 +12,37 @@ import (
 	"github.com/go-chi/render"
 )
 
-type employeeController struct {
-	employeeService service.EmployeeService
+type staffController struct {
+	staffService service.StaffService
 }
-type EmployeeController interface {
+type StaffController interface {
 	GetAll(w http.ResponseWriter, r *http.Request)
 	GetAllCall(w http.ResponseWriter, r *http.Request)
 	FilterCallInTime(w http.ResponseWriter, r *http.Request)
-	CreateEmployee(w http.ResponseWriter, r *http.Request)
-	UpdateEmployee(w http.ResponseWriter, r *http.Request)
+	CreateStaff(w http.ResponseWriter, r *http.Request)
+	UpdateStaff(w http.ResponseWriter, r *http.Request)
 	GetById(w http.ResponseWriter, r *http.Request)
-	DeleteEmployee(w http.ResponseWriter, r *http.Request)
+	DeleteStaff(w http.ResponseWriter, r *http.Request)
 }
 
-// GetAll returns all Employee
-// @tags employee-manager-apis
-// @Summary Get all employees
-// @Description Get all employees
+// GetAll returns all Staff
+// @tags staff-manager-apis
+// @Summary Get all Staffs
+// @Description Get all Staffs
 // @Accept json
 // @Produce json
 // @Success 200 {object} model.Response
-// @Router /employee/all [get]
-func (c *employeeController) GetAll(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/all [get]
+func (c *staffController) GetAll(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
-	employees, err := c.employeeService.GetAll()
+	staffs, err := c.staffService.GetAll()
 	if err != nil {
 		badRequestResponse(w, r, err)
 		return
 	}
 
 	res = &model.Response{
-		Data:    employees,
+		Data:    staffs,
 		Message: "OK",
 		Success: true,
 	}
@@ -51,15 +51,15 @@ func (c *employeeController) GetAll(w http.ResponseWriter, r *http.Request) {
 }
 
 // GetAllCall returns all calls of an user with id
-// @tags employee-manager-apis
+// @tags staff-manager-apis
 // @Summary Get all calls of an user with id
 // @Description Get all calls of an user with id
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
 // @Success 200 {object} model.Response
-// @Router /employee/calls [get]
-func (c *employeeController) GetAllCall(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/calls [put]
+func (c *staffController) GetAllCall(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
 	reqToken := r.Header.Get("Authorization")
 	user, err := middleware.GetClaimsData(reqToken)
@@ -68,7 +68,7 @@ func (c *employeeController) GetAllCall(w http.ResponseWriter, r *http.Request) 
 		badRequestResponse(w, r, err)
 		return
 	}
-	calls, err := c.employeeService.GetAllCall(user.Id)
+	calls, err := c.staffService.GetAllCall(user.Id)
 	if err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
@@ -84,18 +84,18 @@ func (c *employeeController) GetAllCall(w http.ResponseWriter, r *http.Request) 
 }
 
 // FilterCallInTime returns all calls in timeframe of an user with id
-// @tags employee-manager-apis
+// @tags staff-manager-apis
 // @Summary Get all calls in timeframe of an user with id
 // @Description model.CallTimeFilterPayload => []Call
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
-// @Param payload body model.CallTimeFilterPayload true "payload"
+// @Param payload body model.StaffCallFilterPayload true "payload"
 // @Success 200 {object} model.Response
-// @Router /employee/filter/calls [put]
-func (c *employeeController) FilterCallInTime(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/filter/calls [put]
+func (c *staffController) FilterCallInTime(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
-	var payload model.CallTimeFilterPayload
+	var payload model.StaffCallFilterPayload
 	decoder := json.NewDecoder(r.Body)
 	if err := decoder.Decode(&payload); err != nil {
 		badRequestResponse(w, r, err)
@@ -110,7 +110,7 @@ func (c *employeeController) FilterCallInTime(w http.ResponseWriter, r *http.Req
 		return
 	}
 	payload.UserId = user.Id
-	calls, err := c.employeeService.FilterCallInTime(&payload)
+	calls, err := c.staffService.FilterCallInTime(&payload)
 	if err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
@@ -125,26 +125,26 @@ func (c *employeeController) FilterCallInTime(w http.ResponseWriter, r *http.Req
 	render.JSON(w, r, res)
 }
 
-// CreateEmployee create one employee
-// @tags employee-manager-apis
-// @Summary Get all employees
-// @Description Get all employees
+// CreateStaff create one Staff
+// @tags staff-manager-apis
+// @Summary Get all Staffs
+// @Description Get all Staffs
 // @Accept json
 // @Produce json
-// @Param employee body model.Employee true "employee"
+// @Param Staff body model.Staff true "Staff"
 // @Success 200 {object} model.Response
-// @Router /employee/create [post]
-func (c *employeeController) CreateEmployee(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/create [post]
+func (c *staffController) CreateStaff(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
-	var employee model.Employee
+	var staff model.Staff
 
 	decoder := json.NewDecoder(r.Body)
-	if err := decoder.Decode(&employee); err != nil {
+	if err := decoder.Decode(&staff); err != nil {
 		badRequestResponse(w, r, err)
 		return
 	}
 
-	if err := c.employeeService.CreateEmployee(&employee); err != nil {
+	if err := c.staffService.CreateStaff(&staff); err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
 	}
@@ -157,25 +157,25 @@ func (c *employeeController) CreateEmployee(w http.ResponseWriter, r *http.Reque
 	render.JSON(w, r, res)
 }
 
-// UpdateEmployee update one employee
-// @tags employee-manager-apis
-// @Summary Update one employee
-// @Description Update one employee
+// UpdateStaff update one Staff
+// @tags staff-manager-apis
+// @Summary Update one Staff
+// @Description Update one Staff
 // @Accept json
 // @Produce json
-// @Param employee body model.Employee true "employee"
+// @Param staffName body model.StaffNameUpdate true "Staff"
 // @Success 200 {object} model.Response
-// @Router /employee/update [put]
-func (c *employeeController) UpdateEmployee(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/update [put]
+func (c *staffController) UpdateStaff(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
-	var employee model.Employee
+	var staff model.StaffNameUpdate
 	decoder := json.NewDecoder(r.Body)
-	if err := decoder.Decode(&employee); err != nil {
+	if err := decoder.Decode(&staff); err != nil {
 		badRequestResponse(w, r, err)
 		return
 	}
 
-	if err := c.employeeService.UpdateEmployee(&employee); err != nil {
+	if err := c.staffService.UpdateStaff(&staff); err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
 	}
@@ -188,16 +188,16 @@ func (c *employeeController) UpdateEmployee(w http.ResponseWriter, r *http.Reque
 	render.JSON(w, r, res)
 }
 
-// GetById returns one employee
-// @tags employee-manager-apis
-// @Summary Get one employee
-// @Description Get one employee
+// GetById returns one Staff
+// @tags staff-manager-apis
+// @Summary Get one Staff
+// @Description Get one Staff
 // @Accept json
 // @Produce json
 // @Param id path integer true "id"
 // @Success 200 {object} model.Response
-// @Router /employee/{id} [get]
-func (c *employeeController) GetById(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/{id} [get]
+func (c *staffController) GetById(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
 	idStr := chi.URLParam(r, "id")
 	id, err := strconv.Atoi(idStr)
@@ -206,14 +206,14 @@ func (c *employeeController) GetById(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	employee, err := c.employeeService.GetById(id)
+	staff, err := c.staffService.GetById(id)
 	if err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
 	}
 
 	res = &model.Response{
-		Data:    employee,
+		Data:    staff,
 		Message: "OK",
 		Success: true,
 	}
@@ -221,16 +221,16 @@ func (c *employeeController) GetById(w http.ResponseWriter, r *http.Request) {
 	render.JSON(w, r, res)
 }
 
-// DeleteCustomer delete one employee
-// @tags employee-manager-apis
-// @Summary Delete one employee
-// @Description Delete one employee
+// DeleteCustomer delete one Staff
+// @tags staff-manager-apis
+// @Summary Delete one Staff
+// @Description Delete one Staff
 // @Accept json
 // @Produce json
 // @Param id path integer true "id"
 // @Success 200 {object} model.Response
-// @Router /employee/delete/{id} [delete]
-func (c *employeeController) DeleteEmployee(w http.ResponseWriter, r *http.Request) {
+// @Router /staff/delete/{id} [delete]
+func (c *staffController) DeleteStaff(w http.ResponseWriter, r *http.Request) {
 	var res *model.Response
 	idStr := chi.URLParam(r, "id")
 	id, err := strconv.Atoi(idStr)
@@ -239,7 +239,7 @@ func (c *employeeController) DeleteEmployee(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := c.employeeService.DeleteEmployee(id); err != nil {
+	if err := c.staffService.DeleteStaff(id); err != nil {
 		internalServerErrorResponse(w, r, err)
 		return
 	}
@@ -252,8 +252,8 @@ func (c *employeeController) DeleteEmployee(w http.ResponseWriter, r *http.Reque
 	render.JSON(w, r, res)
 }
 
-func NewEmployeeController() EmployeeController {
-	return &employeeController{
-		employeeService: service.NewEmployeeService(),
+func NewStaffController() StaffController {
+	return &staffController{
+		staffService: service.NewStaffService(),
 	}
 }
