# model/call.go
@@ -4,14 +4,13 @@ import "time"
 
 type Call struct {
 	Id              int       `json:"id" gorm:"primaryKey"`
-	CustomerId      int       `json:"customerId" gorm:"customerId"`
-	EmployeeId      int       `json:"employeeId" gorm:"employeeId"`
+	Phone           string    `json:"phone" gorm:"phone"`
+	StaffId         int       `json:"staffId" gorm:"staffId"`
 	StartTime       time.Time `json:"startTime" gorm:"startTime"`
 	Duration        string    `json:"duration" gorm:"duration"`
-	EmployeeEmotion string    `json:"employeeEmotion" gorm:"employeeEmotion"`
-	CustomerEmotion string    `json:"customerEmotion" gorm:"customerEmotion"`
-	OverallEmotion  string    `json:"overallEmotion" gorm:"overallEmotion"`
-	Segments        []Segment `json:"segments" gorm:"foreignKey:CallId;constraint:OnDelete:CASCADE, OnUpdate:CASCADE"`
+	StaffEmotion    string    `json:"staffEmotion" gorm:"staffEmotion"`
+	CustomerEmotion string    `json:"emotion" gorm:"emotion"`
+	Segments        []Segment `json:"segments" gorm:"foreignKey:CallId;constraint:OnDelete:CASCADE, OnUpdate:CASCADE" swaggerignore:"true"`
 }
 
 type CallRepository interface {
@@ -21,4 +20,14 @@ type CallRepository interface {
 	UpdateCall(call *Call) error
 	GetById(id int) (*Call, error)
 	DeleteCall(id int) error
+}
+
+type HistoryPayload struct {
+	Phone string `json:"phone"`
+}
+
+type StaffCallFilterPayload struct {
+	UserId    int       `json:"userId"`
+	StartTime time.Time `json:"startTime"`
+	EndTime   time.Time `json:"endTime"`
 }
